# advent-of-code-2020

./: Makefile  README.md  pylintrc  pyproject.toml
aoc2020/: console.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  helloworld.py  utilities.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_helloworld.py
