[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["davidjoliver86 <davidjoliver86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
ipdb = "^0.13.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
